ft/src/tui/tests/snapshots/tasks_tab_preset_picker_open_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│ ── overdue (2)┌ find ────────────────────────────────────────┐               │
│▶   !!  Pay ren│type to search…                               │               │
│    !   Renew p└──────────────────────────────────────────────┘               │
│ ── upcoming (3┌ recent · type to search ─────────────────────┐               │
│        Reply t│▶ done-today                                  │               │
│    !!  Submit │  not-done                                    │  tomorrow     │
│    v   Buy bir│  overdue                                     │               │
│               │  today                                       │               │
│               │  upcoming                                    │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]   modal: task-pres
