ft/src/tui/tests/snapshots/tasks_tab_retag_picker_open_80x24.snap
---
source: ft/src/tui/tests/tasks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│               ┌ find ────────────────────────────────────────┐               │
│               │type to search…                               │               │
│               └──────────────────────────────────────────────┘               │
│               ┌ recent · type to search ─────────────────────┐               │
│               │▶ #wait                                       │               │
│               │  #computer                                   │               │
│               │  #physical                                   │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]   modal: task-reta
