ft/src/tui/tests/snapshots/tasks_tab_subtasks_expanded_80x24.snap
---
source: ft/src/tui/tests/mod.rs
expression: expanded
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Ti
┌ query ───────────────────────────────────────────────────────────────────────┐
│(status in {Open, InProgress} and due < +1w) or (completed = today)           │
└──────────────────────────────────────────────────────────────────────────────┘
┌ tasks ───────────────────────────────────────────────────────────────────────┐
│ ── upcoming (2) ──                                                           │
│▶       ▾ Build a house                         📅  in 2d                      │
│          ▸ Build the walls                                                   │
│          · Pipes and plumbing                                                │
│        Buy groceries                           📅  in 3d                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
