ft/src/tui/tests/snapshots/timeblocks_tab_empty_100x24.snap
---
source: ft/src/tui/tests/timeblocks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Timeblocks            
┌ sidebar ─────────────┐┌ Sun 2026-05-10 (today) ──────────────────────────────────────────────────┐
│                      ││                                                                          │
│ Sun 10 May           ││  no daily note yet.                                                      │
│ 14:32:05             ││  press `c` to create from template                                       │
│                      ││                                                                          │
│ ── totals · 2026-05-1││                                                                          │
│ total 00:00          ││                                                                          │
│                      ││                                                                          │
│ ── focus ──          ││                                                                          │
│ ▶ 2026-05-10         ││                                                                          │
│ view: single (f)     ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Timeblocks                   not yet refreshed             mode: normal
