ft/src/tui/tests/snapshots/timeblocks_tab_populated_today_100x24.snap
---
source: ft/src/tui/tests/timeblocks.rs
expression: frame
---
  1 Graph  │  2 Notes  │  3 Pulse  │  4 Recent  │  5 Search  │  6 Tasks  │  7 Timeblocks            
┌ sidebar ─────────────┐┌ Sun 2026-05-10 (today) ──────────────────────────────────────────────────┐
│                      ││▶   1  09:00 - 10:00  standup @work                                       │
│ Sun 10 May           ││    2  10:00 - 10:30  review @work/code                                   │
│ 14:32:05             ││    3  11:00 - 11:15  coffee @break                                       │
│                      ││                                                                          │
│ ── totals · 2026-05-1││                                                                          │
│ total 01:30          ││                                                                          │
│ @work  01:30         ││                                                                          │
│ @break  00:15        ││                                                                          │
│                      ││                                                                          │
│ ── focus ──          ││                                                                          │
│ ▶ 2026-05-10         ││                                                                          │
│ view: single (f)     ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
│                      ││                                                                          │
└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Timeblocks                   not yet refreshed             mode: normal
